tests/ui/higher-ranked/trait-bounds/trivial-does-not-hold.stderr
error: higher-ranked subtype error
  --> $DIR/trivial-does-not-hold.rs:7:5
   |
LL |     || {};
   |     ^^^^^

error: aborting due to 1 previous error

